[workspace]
members = ["vhpi-sys", "vhpi", "vhpi-shim", "dumper", "tests/test_simple", "tests/stringindexing"]
resolver = "2"

[workspace.package]
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nickg/rust-vhpi"
rust-version = "1.82"

[workspace.dependencies]
vhpi = { path = "vhpi", version = "0.3.1" }
vhpi-sys = { path = "vhpi-sys", version = "0.3.1" }
vhpi-shim = { path = "vhpi-shim", version = "0.3.1" }
bindgen = "0.72"
bitflags = "2.11"
num-bigint = "0.4"
num-derive = "0.4"
num-traits = "0.2"
