[package]
name = "dumper"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A simple VHPI dumper for debugging and exploration."
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
test = false
doctest = false

[dependencies]
vhpi = { workspace = true, features = ["dynamic"] }
