[package]
name = "vhpi-sys"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Raw FFI bindings to the VHDL VHPI library."
repository = "https://github.com/nickg/rust-vhpi"
build = "build.rs"
keywords = ["vhdl", "vhpi", "ffi", "simulation"]
categories = ["external-ffi-bindings", "simulation"]

[build-dependencies]
bindgen = "0.69"
