[package]
name = "vhpi-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Raw FFI bindings to the VHDL VHPI library."
repository.workspace = true
readme = "README.md"
build = "build.rs"
keywords = ["vhdl", "vhpi", "ffi", "simulation"]
categories = ["external-ffi-bindings", "simulation"]
rust-version.workspace = true

[build-dependencies]
bindgen.workspace = true

[features]
default = ["nvc"]
nvc = []
