[package]
name = "vhpi"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust wrapper around the IEEE 1076 VHPI"
repository.workspace = true
keywords = ["vhdl", "vhpi", "wrapper", "hardware-simulation"]
categories = ["simulation", "api-bindings"]
readme = "README.md"

[lib]
name = "vhpi"
path = "src/lib.rs"

[dependencies]
bitflags.workspace = true
num-derive.workspace = true
num-traits.workspace = true
vhpi-sys.workspace = true
