[package]
name = "test_simple"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VHPI test plugin for asserting tb_simple values over time."
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
test = false
doctest = false

[dependencies]
vhpi.workspace = true
